--- a/public/css/style_menu.css
+++ b/public/css/style_menu.css
@@ -1,11 +1,114 @@
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@keyframes functioning {
+  0% {
+    background: #f6f6f6;
+    box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.281);
+  }
+  100% {
+    background: #f2eafb;
+    box-shadow: 0px 10px 5px 0px rgba(0, 0, 0, 0.281);
+  }
+}
+@keyframes iconColor {
+  0% {
+    color: grey;
+  }
+  100% {
+    color: #9356DC;
+  }
+}
+@keyframes cardSelect {
+  0% {
+    box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.281);
+  }
+  100% {
+    box-shadow: 0px 10px 5px 0px rgba(0, 0, 0, 0.281);
+  }
+}
 @keyframes loaderHeart {
   0% {
     opacity: 0;
   }
   100% {
     opacity: 1;
+  }
+}
+@keyframes check {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 30%;
+  }
+}
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes backgroundText {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+@keyframes utensils {
+  0% {
+    opacity: 0;
+    transform: translateX(-283%);
+  }
+  50% {
+    opacity: 1;
+    transform: translateX(190%);
+  }
+  100% {
+    opacity: 0;
+    transform: translateX(-283%);
+  }
+}
+@keyframes loading {
+  0% {
+    opacity: 1;
+  }
+  25% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes new {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
 * {
@@ -58,7 +161,7 @@ body {
   padding: 0;
   overflow: hidden;
 }
-.menu .menu__image {
+.menu .menu__background {
   width: 100%;
   height: 320px;
   object-fit: cover;
@@ -66,12 +169,12 @@ body {
   z-index: -1;
 }
 @media (min-width: 768px) {
-  .menu .menu__image {
+  .menu .menu__background {
     height: 50rem;
   }
 }
 @media (min-width: 1440px) {
-  .menu .menu__image {
+  .menu .menu__background {
     height: 50rem;
   }
 }
@@ -99,7 +202,7 @@ body {
   padding-right: 1rem;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 .menu__body .card__header h2 {
   font-family: "Shrikhand";
@@ -150,9 +253,21 @@ body {
   font-family: "Roboto";
 }
 
+.entrees {
+  animation: fadeIn 1500ms forwards;
+}
+
+.plats {
+  animation: fadeIn 1500ms both 1500ms;
+}
+
+.desserts {
+  animation: fadeIn 1500ms both 3000ms;
+}
+
 .btn {
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
   box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.281);
   background-color: #fff;
   border-radius: 1rem;
@@ -167,9 +282,29 @@ body {
     margin: 1rem;
   }
 }
+.btn:hover {
+  animation: cardSelect 300ms forwards;
+}
+.btn:hover .btn__body__animation {
+  width: 25%;
+}
+.btn:hover .fa-check-circle {
+  animation: rotate 1000ms forwards;
+}
 .btn__body {
   display: flex;
   width: 100%;
+}
+.btn__body__animation {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 1rem;
+  height: 100%;
+  order: 2;
+  background: #99E2D0;
+  width: 0;
+  transition: all 600ms cubic-bezier(0.49, 0.15, 0, 1.01);
 }
 .btn__body .fa-check-circle {
   font-size: 1.8rem;
@@ -213,7 +348,7 @@ body {
   justify-content: flex-end;
 }
 
-.menu__image--alt {
+.menu__background--alt {
   width: 110%;
   height: 320px;
   object-fit: cover;
@@ -222,13 +357,13 @@ body {
   z-index: -1;
 }
 @media (min-width: 768px) {
-  .menu__image--alt {
+  .menu__background--alt {
     object-position: -1.2rem -10rem;
     height: 50rem;
   }
 }
 @media (min-width: 1440px) {
-  .menu__image--alt {
+  .menu__background--alt {
     object-position: -1.2rem -70rem;
     height: 50rem;
   }
@@ -243,8 +378,8 @@ body {
   margin-bottom: 4rem;
   padding-top: 1rem;
   padding-bottom: 1rem;
-  padding-left: 2rem;
-  padding-right: 2rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
   background: linear-gradient(#FF79DA, #9356DC);
   border-radius: 30px;
   box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.281);
@@ -293,8 +428,8 @@ footer {
 footer img {
   width: 7rem;
   filter: invert(1);
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
 }
 footer ul {
   list-style: none;
@@ -303,8 +438,8 @@ footer ul {
 footer li {
   margin-bottom: 0.5rem;
   font-family: "Roboto";
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
 }
 footer li a {
   text-decoration: none;
